--- a/pages/styles.css
+++ b/pages/styles.css
@@ -63,7 +63,7 @@ body {
     font-style: normal;
     font-weight: 400;
     line-height: 1.4em;
-    color: rgba(255, 255, 255, 0.75);
+    color: rgb(255, 255, 255);
 }
 
 .prompt-container {
@@ -225,7 +225,7 @@ textarea {
     border-right-width: 1px;
     border-style: solid;
     border-top-width: 1px;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(123, 4, 221);
     border-radius: 54.3478% / 238.095%;
     filter: grayscale(1);
     transform: none;
@@ -249,8 +249,8 @@ textarea {
     height: 17px;
     image-rendering: pixelated;
     flex-shrink: 0;
-    fill: black;
-    color: black;
+    fill: rgb(123, 4, 221);
+    color: rgb(123, 4, 221);
     transform: none;
     transform-origin: 50% 50% 0px;
     padding-right: 5px;
@@ -323,7 +323,7 @@ textarea {
 .output-content p {
     text-align:left;
     white-space: pre-line;
-    color: rgba(255, 255, 255, 0.5);
+    color: rgba(255, 255, 255, 0.815);
 }
 
 @media (min-width: 810px) and (max-width: 1199px) {
